--- a/app/src/main/res/layout/chart_marker.xml
+++ b/app/src/main/res/layout/chart_marker.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                         android:layout_width="match_parent"
-                                         android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <View
-        android:layout_width="1dp"
-        android:layout_height="300dp"
-        android:background="@color/azul"/>
-
-</LinearLayout>
+<View
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/line"
+    android:layout_width="1dp"
+    android:layout_height="8000dp"
+    android:background="@color/azul"/>
