--- a/app/src/main/res/layout/custom_button_view.xml
+++ b/app/src/main/res/layout/custom_button_view.xml
@@ -1,13 +1,22 @@
-<TextView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/custom_button_view"
-    style="@style/White14CenteredUpMd"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_azur_corners"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingBottom="@dimen/padding_little"
-    android:paddingEnd="@dimen/padding_huge"
-    android:paddingStart="@dimen/padding_huge"
-    android:paddingTop="@dimen/padding_little"
-    android:textAllCaps="true"/>
+    app:cardElevation="2dp"
+    app:cardUseCompatPadding="true">
+
+    <TextView
+        android:id="@+id/custom_button_view"
+        style="@style/White14CenteredUpMd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_azur_corners"
+        android:foreground="?attr/selectableItemBackground"
+        android:paddingBottom="@dimen/padding_little"
+        android:paddingEnd="@dimen/padding_huge"
+        android:paddingStart="@dimen/padding_huge"
+        android:paddingTop="@dimen/padding_little"
+        android:textAllCaps="true"/>
+
+</android.support.v7.widget.CardView>
